style.css
@import "https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:wght@300;400;500&display=swap";

:root {
    --blue: #0000FF;
    --light-blue: #4444ff;
    --light-grey: #f5ece8;
}

body {
    margin: 0;
    padding: 0;
    font-family: "Helvetica Nueue", Helvetica, Arial, sans-serif;
    background-color: var(--light-blue);
}

nav {
    background-color: var(--light-blue);
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: stretch;
    height: 4rem;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;

    & a {
        color: white;
        /* width: 100%; */
        flex-basis: 200px;
        --border-width: 6px;
        height: calc(100% - var(--border-width));
        /* line-height: 80px; */
        font-size: 1.4rem;
        text-decoration: none;
        text-align: center;
        /* border-radius: 20px; */
        display: flex;
        justify-content: center;
        align-items: center;

        &:hover {
            border-bottom: var(--border-width) solid white;
            /* height: 100%; */
            /* height: calc(100% - 20px); */

            /* border-style: inset; */
        }
    }
}

section {
    padding: 4rem 1rem;
    background-color: white;
    margin: 0;
}

h1,
h2 {
    font-weight: 400;
}

h1 {
    font-size: 3rem;
    margin: 1rem;
}

h2 {
    font-size: 1.8rem;
}

p {
    font-size: 1.4rem;
    font-weight: 300;
    margin-left: 16%;
    margin-right: 16%;
}

b {
    font-weight: 500;
}

ul {
    margin: 0;
    padding: 0;
}

.top-header {
    margin: 10%;
    background-color: rgba(255, 255, 255, 0.8);
    border-radius: 20px;
}

.classroom {
    background-image: url("images/school.png");
    background-attachment: fixed;
}

.flex-section {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: center;
}

.centre {
    text-align: center;
}

.personal-img {
    width: 80%;
    align-content: center;
    text-align: center;
    max-width: 300px;
    margin: 0.5rem 0.5rem 0 0.5rem;
    align-self: flex-end;
}

.nice-bg {
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
}

.grey {
    background-color: var(--light-grey);
}

.subject-list {
    list-style: none;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: center;

    & li {
        flex-basis: 300px;
        margin: 1rem;
        height: 180px;
        border-radius: 20px;
        display: flex;
        /* flex-direction: column; */
        justify-content: center;
        align-items: center;

        & p {
            padding: 0.4rem;
            border-radius: 10px;
        }
    }
}

.maths {
    background-image: url("images/maths.jpg");

    & p {
        background-color: lightyellow;
    }
}

.english {
    background-image: url("images/english.jpg");

    & p {
        background-color: lightblue;
    }
}

.science {
    background-image: url("images/science.jpg");

    & p {
        background-color: pink;
    }
}

.service {
    margin: 4rem auto;

    & img {
        width: 80%;
        max-width: 300px;
    }
}

.email {
    /* font-size: auto; */
    color: inherit;
    /* text-decoration: none; */
    display: flex;
    justify-content: center;
    align-items: center;
    text-underline-offset: 6px;
    margin: auto;
    padding: auto;
    width: fit-content;

    & img {
        width: 2rem;
        margin: 10px;
    }
}

@media screen and (max-width: 700px) {

    nav {
        flex-direction: column;
        height: fit-content;
        justify-content: center;
        align-items: stretch;
        position: initial;

        & a {
            color: white;
            /* width: 100%; */
            flex-basis: 3rem;
            /* line-height: 80px; */
            font-size: 1.4rem;
            display: flex;
            justify-content: center;
            align-items: center;
            &:hover {
                border-bottom: none;
                background-color: var(--blue);
            }
        }
    }

    h1 {
        font-size: 2.6rem;
    }

    h2 {
        font-size: 1.6rem;
    }

    p {
        font-size: 1.2rem;
    }

    .flex-section {
        flex-direction: column;
        align-items: center;
    }

    .subject-list {
        flex-direction: column;
        align-items: center;
        justify-content: space-between;
        display: flex;
    }

    .subject-list li {
        flex-basis: 80px;
        width: 60%;
    }

    .personal-img {
        align-self: auto;
    }
}

